// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Render rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-avatar ant-avatar-circle"
>
  <span
    class="ant-avatar-string"
    style="opacity:0"
  />
</span>
`;

exports[`Avatar Render support size is number 1`] = `
<span
  class="ant-avatar ant-avatar-circle"
  style="width:100px;height:100px;line-height:100px;font-size:18px"
>
  <span
    class="ant-avatar-string"
    style="opacity:0"
  >
    TestString
  </span>
</span>
`;

exports[`Avatar Render support size is object 1`] = `
<Avatar
  shape="circle"
  size={
    Object {
      "sm": 50,
      "xs": 30,
    }
  }
>
  <span
    className="ant-avatar ant-avatar-circle"
    style={
      Object {
        "fontSize": 18,
        "height": 30,
        "lineHeight": "30px",
        "width": 30,
      }
    }
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "WebkitTransform": "scale(0.32) translateX(-50%)",
          "lineHeight": "30px",
          "msTransform": "scale(0.32) translateX(-50%)",
          "transform": "scale(0.32) translateX(-50%)",
        }
      }
    />
  </span>
</Avatar>
`;
